<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false">
    <LinearLayout android:orientation="horizontal"
    android:layout_height="fill_parent" android:layout_width="fill_parent"
    android:layout_weight=".8" android:background="#22222200" />
    <LinearLayout android:id="@+id/textLayout"
        android:orientation="vertical" android:layout_height="fill_parent"
        android:layout_width="fill_parent" android:layout_weight=".2">
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/openaccessbutton"
            android:background="#F7882A"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hitaPaywall"
            style="@style/formMargins"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/formMargins"
            android:text="@string/thatSucks"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tellUsWhy"
            style="@style/formMargins"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/articleUrl"
            style="@style/formMargins"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:inputType="textUri"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yourLocation"
            android:layout_marginLeft="7dp"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/exampleLocation"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DOI"
            android:layout_marginLeft="7dp"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/formDescription"
            android:layout_marginLeft="7dp"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/exampleFormDescription"
            android:inputType="textMultiLine"
            android:lines="5"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/whyAccess"
            android:layout_marginLeft="7dp"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/exampleWhyAccess"
            android:inputType="textMultiLine"
            android:lines="5"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/signUpButtons"
            android:text="@string/submit"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            style="@style/horizontalLine"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="35dp"
            android:text="@string/formInstructions"/>


    </LinearLayout>
</LinearLayout>