<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/backgroundColor"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="10dp">
        <ImageView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_gravity="left"
            android:layout_height="wrap_content"
            android:src="@drawable/logotext"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/header"
            android:text="@string/sign_in"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signInEmail"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/backgroundColor"
            android:textColorHint="#888"
            android:textColor="@color/fontColor"
            android:textSize="20sp"
            android:hint="@string/email_title"
            android:layout_marginBottom="15dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/customNavy"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signInPassword"
            android:inputType="textPassword"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/backgroundColor"
            android:layout_marginTop="15dp"
            android:textColorHint="#888"
            android:textColor="@color/fontColor"
            android:textSize="20sp"
            android:hint="@string/password_title"
            android:fontFamily="sans-serif"
            android:layout_marginBottom="15dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/customNavy"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/signUpButtons"
            android:textColor="@color/customNavy"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:padding="10dp"
            android:gravity="center"
            android:id="@+id/signinButton"
            android:text="@string/sign_in"/>
        <!--
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="#888"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="5dp"
            android:text="@string/sign_in_social_media_description"
            android:id="@+id/socialSignInButton"/>
            -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/socialSignInButtons"
            android:visibility="gone">
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/customNavy"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                style="@style/signUpButtons"
                android:id="@+id/signupGoogleButton"
                android:text="@string/sign_in_google"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/customNavy"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                style="@style/signUpButtons"
                android:id="@+id/signupFacebookButton"
                android:text="@string/sign_in_facebook"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                style="@style/signUpButtons"
                android:textColor="@color/customNavy"
                android:id="@+id/signupTwitterButton"
                android:text="@string/sign_in_twitter"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/backgroundColor"
            android:layout_marginTop="30dp"
            android:textSize="16sp"
            android:text="@string/forgotten_password_link"
            android:id="@+id/forgotPasswordButton"/>
    </LinearLayout>
</ScrollView>