<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="10dp">
        <ImageView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/logotext"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/landing_text"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/fontColor"
            android:layout_marginBottom="10dp"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/signUpButtons"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:textColor="@color/customNavy"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:text="@string/sign_in"
            android:gravity="center"
            android:layout_marginBottom="15dp"
            android:id="@+id/signinButton"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/signUpButtons"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:textColor="@color/customNavy"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:text="@string/sign_up"
            android:gravity="center"
            android:layout_marginBottom="15dp"
            android:id="@+id/signupButton"/>
        <!--
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/signUpButtons"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:textColor="@color/customNavy"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:text="@string/sign_up_with_social_media"
            android:gravity="center"
            android:layout_marginBottom="15dp"
            android:id="@+id/signupWithSocialMediaButton"/>
            -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/privacy_text"
            android:id="@+id/privacy_text"/>
    </LinearLayout>
</ScrollView>