<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginBottom="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq1"
            android:id="@+id/faqQuestion1"
            android:textColor="#000"
            android:layout_marginBottom="5dp"
            android:textSize="25sp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.1"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu_more"
            android:id="@+id/expandAnswerButton"
            android:layout_marginRight="2dp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#555"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/answerDetailsContainer">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq1"
            android:id="@+id/faqQuestion2"
            android:layout_marginTop="5dp"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginLeft="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simpleAnswer1"
            android:id="@+id/faqAnswer"
            android:layout_marginTop="2dp"
            android:textColor="#000"
            android:layout_marginLeft="9dp"
            android:layout_marginRight="7dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:textColor="#333"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="20dp"
            android:text="@string/clickForMoreInfo"
            android:id="@+id/moreInfo"/>
        <WebView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:layout_marginRight="7dp"
            android:id="@+id/detailsContent"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:src="@drawable/ic_menu_less"
            android:layout_marginRight="7dp"
            android:id="@+id/contractAnswerButton"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#555"/>
    </LinearLayout>
</LinearLayout>